scraper/tests/trybuild/runtime_events_alone_does_not_enable_adapter.stderr
error[E0433]: cannot find `adapter` in `nv_redfish_scraper`
 --> tests/trybuild/runtime_events_alone_does_not_enable_adapter.rs:9:32
  |
9 |     let _: nv_redfish_scraper::adapter::redfish::BmcId = ::std::unreachable!();
  |                                ^^^^^^^ could not find `adapter` in `nv_redfish_scraper`
  |
note: found an item that was configured out
 --> src/lib.rs
  |
  | #[cfg(feature = "redfish-adapter")]
  |       --------------------------- the item is gated behind the `redfish-adapter` feature
  | pub mod adapter;
  |         ^^^^^^^
